/* 
  Localizable.strings
  

  Created by Ben Smith on 30/01/17.

*/

"movietypes.movie" = "Movie";
"movietypes.series" = "Series";
"movietypes.episode" = "Episode";
"movietypes.all" = "All";
