...
            </objects>
            <point key="canvasLocation" x="-2119" y="162"/>
        </scene>
        <!--Search-->
        <scene sceneID="7ME-fO-Lij">
            <objects>
                <viewControllerPlaceholder storyboardName="Search" id="b5y-oF-YD7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="LwX-CX-ghs"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mfW-I4-fL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-444" y="41"/>
        </scene>
...
