...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <connections>
                            <outlet property="dataSource" destination="QfN-f1-9hE" id="n8K-NW-hlP"/>
                            <outlet property="delegate" destination="QfN-f1-9hE" id="UA7-Wm-kaX"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="Nk6-cy-Lgt"/>
                    <connections>
                        <segue destination="rhR-Vh-Lue" kind="show" identifier="detailView" id="SfZ-bH-5BA"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W0d-EJ-me3" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
